--- a/analytics-api/Dockerfile
+++ b/analytics-api/Dockerfile
@@ -2,10 +2,11 @@
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER $APP_UID
+# USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
+VOLUME /app/data
 
 
 # This stage is used to build the service project
@@ -28,3 +29,4 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "analytics-api.dll"]
+
